TEST_PROGRAMS/INVALID/hardik_vala/dangling_period.min
# Dangling period.

var x: float;

x = .;

